# k8s-upgrade-assessment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci-cd.yaml
tests/: __init__.py  test_main.py
