[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "k8s-upgrade-assessment"
version = "1.0.0"
description = "AI-powered Kubernetes upgrade risk assessment CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openai>=1.30.0",
    "anthropic>=0.40.0",
]

[project.scripts]
k8s-upgrade = "main:main"

# ─── Black ────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 120
target-version = ["py311", "py312"]

# ─── isort ────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 120

# ─── flake8 (via setup.cfg — flake8 doesn't read pyproject.toml natively) ───
# See setup.cfg below for flake8 config.

# ─── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
warn_return_any = false
warn_unused_ignores = true

# ─── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# ─── coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["main"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 75
